--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.13.2",
     "error": "^10.4.0",
     "express-basic-auth": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
