--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.7",
@@ -29,9 +30,11 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.0.1",
+    "@types/dotenv": "^8.2.0",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
     "error": "^10.4.0",
     "express-basic-auth": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
@@ -65,7 +68,7 @@
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.3.5"
   },
