--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/typeorm": "^8.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/passport-local": "^1.0.34",
+    "@types/zen-observable": "^0.8.3",
     "bcrypt": "^3.0.6",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
@@ -47,7 +48,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.4.0",
-    "typeorm": "^0.2.45"
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
