--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,11 @@
+name: CI
 
+on:
+  push:
+    branches:
+      - main
+
+  steps:
+    - uses: actions/checkout@v3
+    - name: run test coverage
+      run: yarn run test
