--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,17 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
-    
+    runs-on: ubuntu-latest
+  
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+
     steps:
-    - uses: actions/checkout@v3
-    - name: run test coverage
-      run: yarn run test
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn run build --if-present
+      - run: yarn test
