--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/passport-local": "^1.0.34",
     "@types/zen-observable": "^0.8.3",
     "bcrypt": "^3.0.6",
+    "cache-manager": "^4.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "error": "^10.4.0",
@@ -53,6 +55,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^4.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
